v3/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finops
  labels:
    app.kubernetes.io/name: finops
